mock implementation draft
