# backend/generated/src/openapi_server/models/get_course_reviews200_response.py
@@ -1,100 +1,0 @@
-# coding: utf-8
-
-"""
-    Course Management API
-
-    API for managing courses, teachers, reviews, and users.
-
-    The version of the OpenAPI document: 1.0.0
-    Generated by OpenAPI Generator (https://openapi-generator.tech)
-
-    Do not edit the class manually.
-"""  # noqa: E501
-
-
-from __future__ import annotations
-import pprint
-import re  # noqa: F401
-import json
-
-
-
-
-from pydantic import BaseModel, ConfigDict, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
-from openapi_server.models.review import Review
-try:
-    from typing import Self
-except ImportError:
-    from typing_extensions import Self
-
-class GetCourseReviews200Response(BaseModel):
-    """
-    GetCourseReviews200Response
-    """ # noqa: E501
-    reviews: Optional[List[Review]] = None
-    next_cursor: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["reviews", "next_cursor"]
-
-    model_config = {
-        "populate_by_name": True,
-        "validate_assignment": True,
-        "protected_namespaces": (),
-    }
-
-
-    def to_str(self) -> str:
-        """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.model_dump(by_alias=True))
-
-    def to_json(self) -> str:
-        """Returns the JSON representation of the model using alias"""
-        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
-        return json.dumps(self.to_dict())
-
-    @classmethod
-    def from_json(cls, json_str: str) -> Self:
-        """Create an instance of GetCourseReviews200Response from a JSON string"""
-        return cls.from_dict(json.loads(json_str))
-
-    def to_dict(self) -> Dict[str, Any]:
-        """Return the dictionary representation of the model using alias.
-
-        This has the following differences from calling pydantic's
-        `self.model_dump(by_alias=True)`:
-
-        * `None` is only added to the output dict for nullable fields that
-          were set at model initialization. Other fields with value `None`
-          are ignored.
-        """
-        _dict = self.model_dump(
-            by_alias=True,
-            exclude={
-            },
-            exclude_none=True,
-        )
-        # override the default output from pydantic by calling `to_dict()` of each item in reviews (list)
-        _items = []
-        if self.reviews:
-            for _item in self.reviews:
-                if _item:
-                    _items.append(_item.to_dict())
-            _dict['reviews'] = _items
-        return _dict
-
-    @classmethod
-    def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of GetCourseReviews200Response from a dict"""
-        if obj is None:
-            return None
-
-        if not isinstance(obj, dict):
-            return cls.model_validate(obj)
-
-        _obj = cls.model_validate({
-            "reviews": [Review.from_dict(_item) for _item in obj.get("reviews")] if obj.get("reviews") is not None else None,
-            "next_cursor": obj.get("next_cursor")
-        })
-        return _obj
-
-
